force-app/main/default/objects/Opportunity_Stale_Alert__c/Opportunity_Stale_Alert__c.object-meta.xml
<CustomObject>
    <label>Opportunity Stale Alert</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stale Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>