force-app/main/default/objects/Opportunity_Stale_Alert__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <label>Alert Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>