force-app/main/default/objects/Opportunity_Stale_Alert__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stale Alerts</relationshipLabel>
    <relationshipName>Stale_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>