force-app/main/default/objects/Opportunity_Stale_Alert__c/fields/Projected_Auto_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Auto_Close_Date__c</fullName>
    <label>Projected Auto-Close Date</label>
    <type>Date</type>
</CustomField>